--- a/saedit/interface.ui
+++ b/saedit/interface.ui
@@ -198,6 +198,18 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
       <column type="gchararray"/>
     </columns>
   </object>
+  <object class="GtkListStore" id="liststore2">
+    <columns>
+      <!-- column-name text -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
+  <object class="GtkListStore" id="liststore3">
+    <columns>
+      <!-- column-name text -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="GtkWindow" id="win_main">
     <property name="width_request">600</property>
     <property name="height_request">600</property>
@@ -553,6 +565,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                   <object class="GtkComboBoxText" id="actionscbox">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="model">liststore2</property>
                     <property name="active">0</property>
                     <signal name="changed" handler="actions_combo_box_changed_callback" swapped="no"/>
                   </object>
@@ -581,6 +594,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                   <object class="GtkComboBoxText" id="animationscbox">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="model">liststore3</property>
                     <property name="active">0</property>
                     <signal name="changed" handler="animations_combo_box_changed_callback" swapped="no"/>
                   </object>
