--- a/saedit/interface.ui
+++ b/saedit/interface.ui
@@ -469,24 +469,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">3</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkButton" id="xmlfsbutton">
-                    <property name="label">gtk-save</property>
-                    <property name="use_action_appearance">False</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="use_action_appearance">False</property>
-                    <property name="use_stock">True</property>
-                    <signal name="clicked" handler="xml_file_save_button_callback" swapped="no"/>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">False</property>
-                    <property name="position">5</property>
+                    <property name="position">4</property>
                   </packing>
                 </child>
                 <child>
@@ -499,6 +482,23 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                     <property name="use_action_appearance">False</property>
                     <property name="use_stock">True</property>
                     <signal name="clicked" handler="open_xml_file" swapped="no"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">5</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="xmlfsbutton">
+                    <property name="label">gtk-save</property>
+                    <property name="use_action_appearance">False</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <property name="use_action_appearance">False</property>
+                    <property name="use_stock">True</property>
+                    <signal name="clicked" handler="xml_file_save_button_callback" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -539,17 +539,17 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                 </child>
                 <child>
                   <object class="GtkComboBoxText" id="imagesetscbox">
-			<property name="visible">True</property>
-			<property name="can_focus">False</property>
-			<property name="active">0</property>
-			<property name="model">liststore1</property>
-       			<property name="entry_text_column">0</property>
-			<signal name="changed" handler="imagesets_combo_box_changed_callback" swapped="no"/>
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="active">0</property>
+                    <property name="entry_text_column">0</property>
+                    <property name="model">liststore1</property>
+                    <signal name="changed" handler="imagesets_combo_box_changed_callback" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="position">8</property>
+                    <property name="position">9</property>
                   </packing>
                 </child>
                 <child>
@@ -572,14 +572,14 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
-		    <property name="model">liststore2</property>
-       		    <property name="entry_text_column">0</property>
+                    <property name="entry_text_column">0</property>
+                    <property name="model">liststore2</property>
                     <signal name="changed" handler="actions_combo_box_changed_callback" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="position">10</property>
+                    <property name="position">11</property>
                   </packing>
                 </child>
                 <child>
@@ -602,8 +602,8 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
-		    <property name="model">liststore3</property>
-       		    <property name="entry_text_column">0</property>
+                    <property name="entry_text_column">0</property>
+                    <property name="model">liststore3</property>
                     <signal name="changed" handler="animations_combo_box_changed_callback" swapped="no"/>
                   </object>
                   <packing>
@@ -643,6 +643,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                       <object class="GtkToolbar" id="toolbar">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="sensitive">False</property>
                         <child>
                           <object class="GtkToolButton" id="toolbar-to-first">
                             <property name="use_action_appearance">False</property>
@@ -652,6 +653,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                             <property name="label" translatable="yes">First frame</property>
                             <property name="use_underline">True</property>
                             <property name="stock_id">gtk-goto-first</property>
+                            <signal name="clicked" handler="toolbar_to_first_clicked_callback" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -667,6 +669,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                             <property name="label" translatable="yes">Previous frame</property>
                             <property name="use_underline">True</property>
                             <property name="stock_id">gtk-go-back</property>
+                            <signal name="clicked" handler="toolbar_prev_frame_clicked_callback" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -682,6 +685,23 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                             <property name="label" translatable="yes">Continue sequencing</property>
                             <property name="use_underline">True</property>
                             <property name="stock_id">gtk-media-play</property>
+                            <signal name="clicked" handler="toolbar_play_clicked_callback" swapped="no"/>
+                          </object>
+                          <packing>
+                            <property name="expand">True</property>
+                            <property name="homogeneous">True</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkToolButton" id="toolbar-pause">
+                            <property name="use_action_appearance">False</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="use_action_appearance">False</property>
+                            <property name="label" translatable="yes">Pause sequencing</property>
+                            <property name="use_underline">True</property>
+                            <property name="stock_id">gtk-media-pause</property>
+                            <signal name="clicked" handler="toolbar_pause_clicked_callback" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -697,6 +717,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                             <property name="label" translatable="yes">Next frame</property>
                             <property name="use_underline">True</property>
                             <property name="stock_id">gtk-go-forward</property>
+                            <signal name="clicked" handler="toolbar_next_frame_clicked_callback" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -704,7 +725,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkToolButton" id="toolbar-to-end">
+                          <object class="GtkToolButton" id="toolbar-to-last">
                             <property name="use_action_appearance">False</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
@@ -712,6 +733,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                             <property name="label" translatable="yes">Last frame</property>
                             <property name="use_underline">True</property>
                             <property name="stock_id">gtk-goto-last</property>
+                            <signal name="clicked" handler="toolbar_to_last_clicked_callback" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">True</property>
