SAE: Correcting interface.

--- a/saedit/interface.ui
+++ b/saedit/interface.ui
@@ -410,10 +410,9 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
-              <object class="GtkVButtonBox" id="vbuttonbox1">
+              <object class="GtkVBox" id="vbox4">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="layout_style">start</property>
                 <child>
                   <object class="GtkLabel" id="label2">
                     <property name="visible">True</property>
@@ -469,7 +468,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">4</property>
+                    <property name="position">3</property>
                   </packing>
                 </child>
                 <child>
@@ -486,7 +485,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="position">5</property>
+                    <property name="position">4</property>
                   </packing>
                 </child>
                 <child>
@@ -519,6 +518,17 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
+                    <property name="position">6</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkSeparator" id="separator1">
+                    <property name="orientation">GTK_ORIENTATION_HORIZONTAL</property>
+                    <property name="height_request">30</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
                     <property name="position">7</property>
                   </packing>
                 </child>
@@ -534,7 +544,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="position">7</property>
+                    <property name="position">8</property>
                   </packing>
                 </child>
                 <child>
@@ -564,7 +574,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="position">9</property>
+                    <property name="position">10</property>
                   </packing>
                 </child>
                 <child>
@@ -594,7 +604,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="position">11</property>
+                    <property name="position">12</property>
                   </packing>
                 </child>
                 <child>
@@ -609,7 +619,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="position">34</property>
+                    <property name="position">13</property>
                   </packing>
                 </child>
               </object>
@@ -617,6 +627,17 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
                 <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkSeparator" id="separator2">
+                <property name="orientation">GTK_ORIENTATION_VERTICAL</property>
+                <property name="width_request">1</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -779,7 +800,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
