--- a/saedit/interface.ui
+++ b/saedit/interface.ui
@@ -418,6 +418,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Clientdata folder</property>
+                    <property name="height_request">24</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -447,6 +448,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">XML source file</property>
+                    <property name="height_request">24</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -537,6 +539,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Imagesets</property>
+                    <property name="height_request">24</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -567,6 +570,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Actions</property>
+                    <property name="height_request">24</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -597,6 +601,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Directions</property>
+                    <property name="height_request">24</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
