--- a/saedit/interface.ui
+++ b/saedit/interface.ui
@@ -793,6 +793,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                         <property name="tab_width">4</property>
                         <property name="auto_indent">True</property>
                         <property name="indent_on_tab">False</property>
+                        <property name="highlight_current_line">True</property>
                       </object>
                     </child>
                   </object>
