--- a/saedit/interface.ui
+++ b/saedit/interface.ui
@@ -212,6 +212,42 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
       <column type="gchararray"/>
     </columns>
   </object>
+  <object class="GtkMessageDialog" id="parsing-error-dialog">
+    <property name="can_focus">False</property>
+    <property name="border_width">5</property>
+    <property name="type_hint">dialog</property>
+    <property name="skip_taskbar_hint">True</property>
+    <property name="message_type">error</property>
+    <property name="buttons">close</property>
+    <property name="text" translatable="yes">&lt;b&gt;Bad source buffer!&lt;/b&gt;</property>
+    <property name="use_markup">True</property>
+    <signal name="response" handler="gtk_widget_hide" swapped="no"/>
+    <child internal-child="vbox">
+      <object class="GtkBox" id="messagedialog-vbox">
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">14</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox" id="messagedialog-action_area">
+            <property name="can_focus">False</property>
+            <property name="layout_style">end</property>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkWindow" id="win_main">
     <property name="width_request">600</property>
     <property name="height_request">600</property>
@@ -415,10 +451,10 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                 <property name="can_focus">False</property>
                 <child>
                   <object class="GtkLabel" id="label2">
+                    <property name="height_request">24</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Clientdata folder</property>
-                    <property name="height_request">24</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -445,10 +481,10 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                 </child>
                 <child>
                   <object class="GtkLabel" id="label1">
+                    <property name="height_request">24</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">XML source file</property>
-                    <property name="height_request">24</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -469,7 +505,7 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="fill">True</property>
+                    <property name="fill">False</property>
                     <property name="position">3</property>
                   </packing>
                 </child>
@@ -525,8 +561,8 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                 </child>
                 <child>
                   <object class="GtkSeparator" id="separator1">
-                    <property name="orientation">GTK_ORIENTATION_HORIZONTAL</property>
                     <property name="height_request">30</property>
+                    <property name="can_focus">False</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -536,10 +572,10 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                 </child>
                 <child>
                   <object class="GtkLabel" id="label3">
+                    <property name="height_request">24</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Imagesets</property>
-                    <property name="height_request">24</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -556,7 +592,6 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
                     <property name="entry_text_column">0</property>
-                    <property name="model">liststore1</property>
                     <signal name="changed" handler="imagesets_combo_box_changed_callback" swapped="no"/>
                   </object>
                   <packing>
@@ -567,10 +602,10 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                 </child>
                 <child>
                   <object class="GtkLabel" id="label4">
+                    <property name="height_request">24</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Actions</property>
-                    <property name="height_request">24</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -587,7 +622,6 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
                     <property name="entry_text_column">0</property>
-                    <property name="model">liststore2</property>
                     <signal name="changed" handler="actions_combo_box_changed_callback" swapped="no"/>
                   </object>
                   <packing>
@@ -598,10 +632,10 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                 </child>
                 <child>
                   <object class="GtkLabel" id="label5">
+                    <property name="height_request">24</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Directions</property>
-                    <property name="height_request">24</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
@@ -618,7 +652,6 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
                     <property name="entry_text_column">0</property>
-                    <property name="model">liststore3</property>
                     <signal name="changed" handler="animations_combo_box_changed_callback" swapped="no"/>
                   </object>
                   <packing>
@@ -636,8 +669,9 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
             </child>
             <child>
               <object class="GtkSeparator" id="separator2">
-                <property name="orientation">GTK_ORIENTATION_VERTICAL</property>
                 <property name="width_request">1</property>
+                <property name="can_focus">False</property>
+                <property name="orientation">vertical</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -668,8 +702,8 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                     <child>
                       <object class="GtkToolbar" id="toolbar">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
                         <property name="sensitive">False</property>
+                        <property name="can_focus">False</property>
                         <child>
                           <object class="GtkToolButton" id="toolbar-to-first">
                             <property name="use_action_appearance">False</property>
@@ -792,8 +826,8 @@ Reid Yaro &lt;reidyaro@gmail.com&gt;</property>
                         <property name="show_line_numbers">True</property>
                         <property name="tab_width">4</property>
                         <property name="auto_indent">True</property>
-                        <property name="indent_on_tab">False</property>
                         <property name="highlight_current_line">True</property>
+                        <property name="indent_on_tab">False</property>
                       </object>
                     </child>
                   </object>
